--- a/hyperparams_config.json
+++ b/hyperparams_config.json
@@ -18,11 +18,11 @@
   "training": {
     "rounds": 4,
     "eps_per_round": 500,
-    "quick_test_mode": false,
+    "quick_test_mode": true,
     "quick_test_rounds": 1,
-    "quick_test_eps_per_round": 500,
+    "quick_test_eps_per_round": 100,
     "validation_episodes_ratio": 0.5,
-    "validation_opponent": "randomized",
+    "validation_opponent": "both",
     "validation_opponent_comment": "Options: 'randomized', 'gapmaximizer', or 'both'"
   },
   "early_stopping": {
