fix: enable intermediate rewards to solve sparse reward problem
- Set USE_INTERMEDIATE_REWARDS = True in training.py
- Fixed eps_decay from 28510 to 1500 (reaches minimum by Round 1)
- Updated tests to reflect intermediate rewards being enabled
- Documented experimental findings in Reward Engineering.md:
  - Sparse rewards alone led to no learning (18-23% win rate)
  - Loss decreased but agent couldn't attribute wins to actions
  - Intermediate rewards provide necessary credit assignment signal
- Preserved failed experiment data for comparison

The sparse rewards experiment showed that without intermediate
feedback, the agent learns to minimize TD error but cannot learn
which actions lead to wins in complex games like Cuttle.

--- a/hyperparams_config.json
+++ b/hyperparams_config.json
@@ -12,7 +12,8 @@
   "gamma": 0.90,
   "eps_start": 0.90,
   "eps_end": 0.05,
-  "eps_decay": 28510,
+  "eps_decay": 1500,
+  "eps_decay_comment": "Decay constant for epsilon-greedy. With 5000 training episodes, eps reaches ~0.08 by end of training.",
   "tau": 0.005,
   "target_update_frequency": 500,
   "learning_rate": 3e-5,
