--- a/experiments/FAILED_experiment_20260119_no_intermediate_rewards/runs/boolean_run_01/hyperparams_config.json
+++ b/experiments/FAILED_experiment_20260119_no_intermediate_rewards/runs/boolean_run_01/hyperparams_config.json
@@ -2,7 +2,7 @@
   "comment": "Hyperparameter configuration for training DQN agent in Cuttle game.",
   "random_seed": 15796,
   "comment_random_seed": "Seed for reproducibility. Set to null for non-deterministic runs. Experiment manager overrides this.",
-  "network_type": "embedding",
+  "network_type": "boolean",
   "comment_network_type": "Options: 'boolean', 'embedding', 'multi_encoder'",
   "embedding_dim": 32,
   "comment_embedding_dim": "For embedding-based network only",
@@ -16,14 +16,14 @@
   "eps_decay_comment": "Decay constant for epsilon-greedy. With 5000 training episodes, eps reaches ~0.08 by end of training.",
   "tau": 0.005,
   "target_update_frequency": 500,
-  "learning_rate": 1e-04,
+  "learning_rate": 3e-05,
   "lr_decay_rate": 0.9,
   "lr_decay_interval": 5,
   "gradient_clip_norm": 5.0,
   "q_value_clip": 15.0,
   "replay_buffer_size": 30000,
   "training": {
-    "rounds": 5,
+    "rounds": 20,
     "eps_per_round": 250,
     "quick_test_mode": false,
     "quick_test_rounds": 1,
