feat: Enable architecture comparison with embeddings
Add EmbeddingBasedNeuralNetwork combining embeddings with configurable
architectures. Allows comparing linear/large_hidden/game_based while
using learned card embeddings (62% vs 18% win rate vs boolean inputs).

- New EmbeddingBasedNeuralNetwork class
- Support embeddings for all architecture types in train.py
- Add embedding configuration options to hyperparams_config.json
- Enhance NeuralNetwork with configurable hidden_layers

--- a/experiments/experiment_20260123_152712_embedding_architecture_comparison/base_hyperparams_config.json
+++ b/experiments/experiment_20260123_152712_embedding_architecture_comparison/base_hyperparams_config.json
@@ -7,15 +7,13 @@
   "use_embeddings": true,
   "comment_use_embeddings": "Use embeddings for preprocessing instead of boolean inputs. Previous experiments showed embeddings achieve 62% win rate vs 18% for boolean. This allows fair architecture comparison while using a representation that actually learns.",
   "embedding_dim": 52,
-  "comment_embedding_dim": "Dimension of card embeddings. Game-based: 52 (one per card).",
+  "comment_embedding_dim": "Dimension of card embeddings. Game-based: 52 (one per card). Used for EmbeddingBasedNeuralNetwork when use_embeddings=true.",
   "zone_encoded_dim": 52,
   "comment_zone_encoded_dim": "Dimension of each zone encoding after aggregation. Game-based: 52 (one per card).",
   "game_based_scale": 2,
   "comment_game_based_scale": "Scale factor for game-based architecture. When set, uses [52*k, 13*k, 15*k] hidden layers. Increased from 1 to 2 to address catastrophic loss divergence. [104, 26, 30] provides 2x capacity and less severe bottleneck.",
   "game_based_hidden_layers": null,
   "comment_game_based_hidden_layers": "Optional explicit game-based hidden layer sizes (list of ints). If null, uses [52*scale, 13*scale, 15*scale]. Alternative: [104, 52, 26] for wider bottleneck (less compression).",
-  "embedding_dim": 32,
-  "comment_embedding_dim": "For embedding-based network only (backward compatibility)",
   "embedding_size": 16,
   "comment_embedding_size": "Kept for backward compatibility, no longer used (no embeddings - all inputs are boolean arrays)",
   "batch_size": 128,
@@ -36,8 +34,8 @@
   "training": {
     "rounds": 20,
     "eps_per_round": 250,
-    "quick_test_mode": true,
-    "quick_test_mode_comment": "Enabled for debugging. Running 5 rounds with 100 episodes each to quickly test if learning rate reduction improves performance.",
+    "quick_test_mode": false,
+    "quick_test_mode_comment": "Disabled for full experiment. Set to true for quick debugging runs.",
     "quick_test_rounds": 5,
     "quick_test_eps_per_round": 250,
     "validation_episodes_ratio": 1.0,
