Added graphing, still bugged but present

--- a/hyperparams_config.json
+++ b/hyperparams_config.json
@@ -22,19 +22,19 @@
   "gamma": 0.9,
   "eps_start": 0.9,
   "eps_end": 0.15,
-  "eps_decay": 20000,
-  "eps_decay_comment": "Decay constant for epsilon-greedy. Adjusted for ~34,000 total training steps. Epsilon decays from 0.9 to ~0.1 over full training, allowing gradual exploration-to-exploitation transition. Previous value (1500) caused epsilon to reach minimum too early (round 5).",
+  "eps_decay": 30000,
+  "eps_decay_comment": "Slower decay (30k) retains exploration into rounds 5-10, reducing risk of bad local optima.",
   "tau": 0.005,
   "target_update_frequency": 500,
   "learning_rate": 5e-5,
   "learning_rate_comment": "Reduced from 1e-4 to 3e-5 for more stable learning. Model was learning (loss decreasing) but not improving performance, suggesting unstable updates. Quick test mode enabled for debugging.",
-  "lr_decay_rate": 0.9,
-  "lr_decay_interval": 5,
+  "lr_decay_rate": 0.95,
+  "lr_decay_interval": 10,
   "gradient_clip_norm": 5.0,
   "q_value_clip": 15.0,
   "replay_buffer_size": 30000,
   "training": {
-    "rounds": 20,
+    "rounds": 10,
     "eps_per_round": 250,
     "quick_test_mode": false,
     "quick_test_mode_comment": "Enabled for debugging. Running 5 rounds with 100 episodes each to quickly test if learning rate reduction improves performance.",
@@ -43,7 +43,9 @@
     "validation_episodes_ratio": 1.0,
     "validation_episodes_ratio_comment": "250 validation episodes per round for reliable win rate estimates. Time saved by reducing runs per type from 7 to 5 instead.",
     "validation_opponent": "both",
-    "validation_opponent_comment": "Options: 'randomized', 'gapmaximizer', or 'both'"
+    "validation_opponent_comment": "Options: 'randomized', 'gapmaximizer', or 'both'",
+    "curriculum_vs_gapmaximizer_ratio": 0,
+    "early_stopping_rounds_without_improvement": 3
   },
   "early_stopping": {
     "enabled": true,
